# vuln-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sample_data/: custom_cves.json  sample_scan_result.json
tests/: __init__.py  conftest.py  test_cli.py  test_cve_checker.py  test_models.py  test_reporter.py  test_scanner.py
vuln_scanner/: __init__.py  cli.py  cve_checker.py  models.py  reporter.py  scanner.py
